# WEB-HW9

./: README.md
WEB-HW9/: authors.json  main.py  pyproject.toml  quotes.json
